@@ -1,6 +1,6 @@
-# $Id: cpuflags.mk,v 1.15 2004/03/17 00:26:55 abs Exp $
+# $Id: cpuflags.mk,v 1.16 2005/05/01 22:03:37 abs Exp $
 # Makefile include fragment to simplify use of cpuflags in pkgsrc
-# abs@netbsd.org - freely distributable, no warrenties, stick no bills.
+# abs@absd.org - freely distributable, no warrenties, stick no bills.
 
 # Try to optimise based on CPU
 # Does not affect any package that overrides CFLAGS/CXXFLAGS/CCOPTIONS
