@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.9996 2005/05/01 19:08:49 adrianp Exp $
+$NetBSD: CHANGES,v 1.9997 2005/05/01 22:05:37 abs Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -2243,3 +2243,5 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated getmail to 4.3.7 [schmonz 2005-05-01]
 	Updated imp to 3.2.8 [adrianp 2005-05-01]
 	Updated imp to 4.0.3 [adrianp 2005-05-01]
+	Updated cpuflags to 0.87 [abs 2005-05-01]
+
